--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "micro": "^9.3.4",
-    "microrouter": "^3.1.3"
+    "microrouter": "^3.1.3",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "ncc": "^0.3.6"
