--- a/it_IT/Dockerfile
+++ b/it_IT/Dockerfile
@@ -1,5 +1,12 @@
 FROM php:7.4-cli
 COPY . /usr/src/app
 WORKDIR /usr/src/app
-EXPOSE 80
-CMD [ "php", "-S", "0.0.0.0:80" ]
+
+ENV PORT=3000
+ENV APP_URL=0.0.0.0:${PORT}
+
+EXPOSE ${PORT}
+
+RUN chmod +x ./entrypoint.sh
+
+ENTRYPOINT [ "./entrypoint.sh" ]
